Generate Image fragment

--- a/app/src/main/res/layout/fragment_generate_image.xml
+++ b/app/src/main/res/layout/fragment_generate_image.xml
@@ -1,5 +1,3 @@
-
-
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -7,14 +5,14 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:padding="10dp"
-    tools:context=".presentation.generate_image.GenerateImageFragment">
+    tools:context=".presentation.ui.generate_image.GenerateImageFragment">
 
     <TextView
         android:id="@+id/editDesc"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
-        android:text="@string/enter_description"
+        android:text="@string/edit_description"
         android:textColor="@color/primary"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
@@ -28,7 +26,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
         android:gravity="top"
-        android:hint="@string/prompt_hint"
+        android:hint="@string/hint_reminder"
         android:textColorHint="@color/primary"
         app:boxCornerRadiusBottomEnd="20dp"
         app:boxCornerRadiusBottomStart="20dp"
