--- a/app/src/main/res/layout/fragment_generate_image.xml
+++ b/app/src/main/res/layout/fragment_generate_image.xml
@@ -12,7 +12,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
-        android:text="@string/edit_description"
+        android:text="@string/enter_description"
         android:textColor="@color/primary"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
@@ -26,7 +26,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
         android:gravity="top"
-        android:hint="@string/hint_reminder"
+        android:hint="@string/prompt_hint"
         android:textColorHint="@color/primary"
         app:boxCornerRadiusBottomEnd="20dp"
         app:boxCornerRadiusBottomStart="20dp"
